--- a/course1_downloads/Assignment 4.ipynb
+++ b/course1_downloads/Assignment 4.ipynb
@@ -13,10 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -50,9 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Use this dictionary to map state names to two letter acronyms\n",
@@ -61,11 +57,419 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>RegionName</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Auburn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Florence</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Jacksonville</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Livingston</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Montevallo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Troy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Tuscaloosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Tuskegee</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>Fairbanks</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>Flagstaff</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>Tempe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>Tucson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>Arkadelphia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>Conway</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>Fayetteville</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>Jonesboro</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>Magnolia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>Monticello</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>Russellville</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>Searcy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>California</td>\n",
+       "      <td>Angwin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>California</td>\n",
+       "      <td>Arcata</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>California</td>\n",
+       "      <td>Berkeley</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>California</td>\n",
+       "      <td>Chico</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>California</td>\n",
+       "      <td>Claremont</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>California</td>\n",
+       "      <td>Cotati</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>California</td>\n",
+       "      <td>Davis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>California</td>\n",
+       "      <td>Irvine</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>California</td>\n",
+       "      <td>Isla Vista</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>California</td>\n",
+       "      <td>University Park, Los Angeles</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>487</th>\n",
+       "      <td>Virginia</td>\n",
+       "      <td>Wise</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>488</th>\n",
+       "      <td>Virginia</td>\n",
+       "      <td>Chesapeake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>489</th>\n",
+       "      <td>Washington</td>\n",
+       "      <td>Bellingham</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>490</th>\n",
+       "      <td>Washington</td>\n",
+       "      <td>Cheney</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>491</th>\n",
+       "      <td>Washington</td>\n",
+       "      <td>Ellensburg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>492</th>\n",
+       "      <td>Washington</td>\n",
+       "      <td>Pullman</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>493</th>\n",
+       "      <td>Washington</td>\n",
+       "      <td>University District, Seattle</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>494</th>\n",
+       "      <td>West Virginia</td>\n",
+       "      <td>Athens</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>495</th>\n",
+       "      <td>West Virginia</td>\n",
+       "      <td>Buckhannon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>496</th>\n",
+       "      <td>West Virginia</td>\n",
+       "      <td>Fairmont</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>497</th>\n",
+       "      <td>West Virginia</td>\n",
+       "      <td>Glenville</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>498</th>\n",
+       "      <td>West Virginia</td>\n",
+       "      <td>Huntington</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499</th>\n",
+       "      <td>West Virginia</td>\n",
+       "      <td>Montgomery</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>500</th>\n",
+       "      <td>West Virginia</td>\n",
+       "      <td>Morgantown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>501</th>\n",
+       "      <td>West Virginia</td>\n",
+       "      <td>Shepherdstown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>502</th>\n",
+       "      <td>West Virginia</td>\n",
+       "      <td>West Liberty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>503</th>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>Appleton</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>504</th>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>Eau Claire</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>505</th>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>Green Bay</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>506</th>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>La Crosse</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507</th>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>Madison</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>508</th>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>Menomonie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>509</th>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>Milwaukee</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>510</th>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>Oshkosh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>511</th>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>Platteville</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>512</th>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>River Falls</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>513</th>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>Stevens Point</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>514</th>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>Waukesha</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>515</th>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>Whitewater</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>516</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>Laramie</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>517 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             State                    RegionName\n",
+       "0          Alabama                        Auburn\n",
+       "1          Alabama                      Florence\n",
+       "2          Alabama                  Jacksonville\n",
+       "3          Alabama                    Livingston\n",
+       "4          Alabama                    Montevallo\n",
+       "5          Alabama                          Troy\n",
+       "6          Alabama                    Tuscaloosa\n",
+       "7          Alabama                      Tuskegee\n",
+       "8           Alaska                     Fairbanks\n",
+       "9          Arizona                     Flagstaff\n",
+       "10         Arizona                         Tempe\n",
+       "11         Arizona                        Tucson\n",
+       "12        Arkansas                   Arkadelphia\n",
+       "13        Arkansas                        Conway\n",
+       "14        Arkansas                  Fayetteville\n",
+       "15        Arkansas                     Jonesboro\n",
+       "16        Arkansas                      Magnolia\n",
+       "17        Arkansas                    Monticello\n",
+       "18        Arkansas                  Russellville\n",
+       "19        Arkansas                        Searcy\n",
+       "20      California                        Angwin\n",
+       "21      California                        Arcata\n",
+       "22      California                      Berkeley\n",
+       "23      California                         Chico\n",
+       "24      California                     Claremont\n",
+       "25      California                        Cotati\n",
+       "26      California                         Davis\n",
+       "27      California                        Irvine\n",
+       "28      California                    Isla Vista\n",
+       "29      California  University Park, Los Angeles\n",
+       "..             ...                           ...\n",
+       "487       Virginia                          Wise\n",
+       "488       Virginia                    Chesapeake\n",
+       "489     Washington                    Bellingham\n",
+       "490     Washington                        Cheney\n",
+       "491     Washington                    Ellensburg\n",
+       "492     Washington                       Pullman\n",
+       "493     Washington  University District, Seattle\n",
+       "494  West Virginia                        Athens\n",
+       "495  West Virginia                    Buckhannon\n",
+       "496  West Virginia                      Fairmont\n",
+       "497  West Virginia                     Glenville\n",
+       "498  West Virginia                    Huntington\n",
+       "499  West Virginia                    Montgomery\n",
+       "500  West Virginia                    Morgantown\n",
+       "501  West Virginia                 Shepherdstown\n",
+       "502  West Virginia                  West Liberty\n",
+       "503      Wisconsin                      Appleton\n",
+       "504      Wisconsin                    Eau Claire\n",
+       "505      Wisconsin                     Green Bay\n",
+       "506      Wisconsin                     La Crosse\n",
+       "507      Wisconsin                       Madison\n",
+       "508      Wisconsin                     Menomonie\n",
+       "509      Wisconsin                     Milwaukee\n",
+       "510      Wisconsin                       Oshkosh\n",
+       "511      Wisconsin                   Platteville\n",
+       "512      Wisconsin                   River Falls\n",
+       "513      Wisconsin                 Stevens Point\n",
+       "514      Wisconsin                      Waukesha\n",
+       "515      Wisconsin                    Whitewater\n",
+       "516        Wyoming                       Laramie\n",
+       "\n",
+       "[517 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def get_list_of_university_towns():\n",
     "    '''Returns a DataFrame of towns and the states they are in from the \n",
@@ -78,31 +482,64 @@
     "    1. For \"State\", removing characters from \"[\" to the end.\n",
     "    2. For \"RegionName\", when applicable, removing every character from \" (\" to the end.\n",
     "    3. Depending on how you read the data, you may need to remove newline character '\\n'. '''\n",
+    "    with open('university_towns.txt','r' ) as f:\n",
+    "        statelist = []\n",
+    "        regionlist = []\n",
+    "        for line in f.readlines():\n",
+    "            a = line.strip()\n",
+    "            if '[edit]' in a:\n",
+    "                state = a.split('[')[0].rstrip()\n",
+    "            else:\n",
+    "                region = a.split('(')[0].rstrip()\n",
+    "                statelist.append(state)\n",
+    "                regionlist.append(region)\n",
+    "            \n",
+    "    dict1 = {'State': statelist,\n",
+    "            'RegionName': regionlist}\n",
     "    \n",
-    "    return \"ANSWER\""
+    "    df = pd.DataFrame(dict1)\n",
+    "    \n",
+    "    \n",
+    "    return df\n",
+    "get_list_of_university_towns()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-46-d51c93917d15>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mgdpdict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mget_recession_start\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-46-d51c93917d15>\u001b[0m in \u001b[0;36mget_recession_start\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mgdpdict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgdplev\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mgdpdict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mget_recession_start\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 0"
+     ]
+    }
+   ],
    "source": [
     "def get_recession_start():\n",
     "    '''Returns the year and quarter of the recession start time as a \n",
     "    string value in a format such as 2005q3'''\n",
-    "    \n",
-    "    return \"ANSWER\""
+    "    gdplev = pd.read_excel('gdplev.xls', skiprows=219)\n",
+    "    gdplev = gdplev.iloc[:,[-4,-3]]\n",
+    "    gdplev.columns = [['Time','GDP']]\n",
+    "    #def start(item):\n",
+    "    #    item\n",
+    "    gdplev[]\n",
+    "    return \n",
+    "get_recession_start()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 37,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_recession_end():\n",
@@ -115,9 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_recession_bottom():\n",
@@ -130,9 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def convert_housing_data_to_quarters():\n",
@@ -153,9 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def run_ttest():\n",
@@ -199,9 +630,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
