--- a/course1_downloads/Assignment 4.ipynb
+++ b/course1_downloads/Assignment 4.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -465,7 +465,7 @@
        "[517 rows x 2 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,20 +506,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
+   "execution_count": 92,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-46-d51c93917d15>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mgdpdict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mget_recession_start\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-46-d51c93917d15>\u001b[0m in \u001b[0;36mget_recession_start\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mgdpdict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgdplev\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mgdpdict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mget_recession_start\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 0"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2008q2', '2008q3', '2008q4'] [14963.4, 14891.6, 14577.0]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'2008q2'"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -527,44 +534,206 @@
     "    '''Returns the year and quarter of the recession start time as a \n",
     "    string value in a format such as 2005q3'''\n",
     "    gdplev = pd.read_excel('gdplev.xls', skiprows=219)\n",
-    "    gdplev = gdplev.iloc[:,[-4,-3]]\n",
+    "    gdplev = gdplev.iloc[:,[-4,-2]]\n",
     "    gdplev.columns = [['Time','GDP']]\n",
-    "    #def start(item):\n",
-    "    #    item\n",
-    "    gdplev[]\n",
-    "    return \n",
+    "    \n",
+    "    j = 0\n",
+    "    list1 = []\n",
+    "    list2 = []\n",
+    "    for index, row in gdplev.iterrows():\n",
+    "        \n",
+    "        if (j >= 0) & (j < 3):\n",
+    " \n",
+    "            list1.append(row['GDP'][0])\n",
+    "            list2.append(row['Time'][0])\n",
+    "            j += 1\n",
+    "            \n",
+    "            if j == 3:\n",
+    "                if (list1[0] > list1[1]) & (list1[1] > list1[2]):\n",
+    "                    print(list2,list1)\n",
+    "                    break\n",
+    "                else:\n",
+    "                    j -= 1\n",
+    "                    list1.pop(0)\n",
+    "                    list2.pop(0)\n",
+    "\n",
+    "            \n",
+    "    return list2[0]\n",
     "get_recession_start()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2008q2', '2008q3', '2008q4'] [14963.4, 14891.6, 14577.0] START of RECESSION\n",
+      "['2008q3', '2008q4', '2009q1'] [14891.6, 14577.0, 14375.0] START of RECESSION\n",
+      "['2008q4', '2009q1', '2009q2'] [14577.0, 14375.0, 14355.6] START of RECESSION\n",
+      "['2009q2', '2009q3', '2009q4'] [14355.6, 14402.5, 14541.9] END of RECESSION\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'2009q2'"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def get_recession_end():\n",
     "    '''Returns the year and quarter of the recession end time as a \n",
     "    string value in a format such as 2005q3'''\n",
-    "       \n",
-    "    return \"ANSWER\""
+    "    gdplev = pd.read_excel('gdplev.xls', skiprows=219)\n",
+    "    gdplev = gdplev.iloc[:,[-4,-2]]\n",
+    "    gdplev.columns = [['Time','GDP']]\n",
+    "    \n",
+    "    start = 0\n",
+    "    j = 0\n",
+    "    list1 = []\n",
+    "    list2 = []\n",
+    "    for index, row in gdplev.iterrows():\n",
+    "        \n",
+    "        if (j >= 0) & (j < 3):\n",
+    " \n",
+    "            list1.append(row['GDP'][0])\n",
+    "            list2.append(row['Time'][0])\n",
+    "            j += 1\n",
+    "            \n",
+    "            if j == 3:\n",
+    "                if (list1[0] > list1[1]) & (list1[1] > list1[2]): \n",
+    "                    #如果连续两个月下降就是衰退的开始，那么讲start置为1，当start=1 时，\n",
+    "                    #开始判断是否有上升，如果连续两个月的上升，那么就打印衰退结束。\n",
+    "                    print(list2,list1, 'START of RECESSION')\n",
+    "                    start = 1\n",
+    "                    j -= 1\n",
+    "                    list1.pop(0)\n",
+    "                    list2.pop(0)\n",
+    "                    \n",
+    "                    \n",
+    "                elif start == 1:\n",
+    "                    if (list1[0] < list1[1]) & (list1[1] < list1[2]):\n",
+    "                        start = 0\n",
+    "                        print(list2,list1,'END of RECESSION')\n",
+    "                        break\n",
+    "                    else:\n",
+    "                        j -= 1\n",
+    "                        list1.pop(0)\n",
+    "                        list2.pop(0)\n",
+    "                            \n",
+    "                else:\n",
+    "                    j -= 1\n",
+    "                    list1.pop(0)\n",
+    "                    list2.pop(0)\n",
+    "                \n",
+    "            \n",
+    "    return list2[0]\n",
+    "\n",
+    "get_recession_end()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2008q2', '2008q3', '2008q4', '2009q1', '2009q2'] BOTTOM of RECESSION\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'2009q2'"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def get_recession_bottom():\n",
     "    '''Returns the year and quarter of the recession bottom time as a \n",
     "    string value in a format such as 2005q3'''\n",
+    "    gdplev = pd.read_excel('gdplev.xls', skiprows=219)\n",
+    "    gdplev = gdplev.iloc[:,[-4,-2]]\n",
+    "    gdplev.columns = [['Time','GDP']]\n",
     "    \n",
-    "    return \"ANSWER\""
+    "    start = 0\n",
+    "    j = 0\n",
+    "    bottom = 0\n",
+    "    list1 = []\n",
+    "    list2 = []\n",
+    "    list3 = []\n",
+    "    list4 = []\n",
+    "    dic1 = {}\n",
+    "    for index, row in gdplev.iterrows():\n",
+    "        \n",
+    "        if (j >= 0) & (j < 3):\n",
+    " \n",
+    "            list1.append(row['GDP'][0])\n",
+    "            list2.append(row['Time'][0])\n",
+    "            j += 1\n",
+    "            \n",
+    "            if j == 3:\n",
+    "                if (list1[0] > list1[1]) & (list1[1] > list1[2]): \n",
+    "                    #如果连续两个月下降就是衰退的开始，那么讲start置为1，当start=1 时，\n",
+    "                    #开始判断是否有上升，如果连续两个月的上升，那么就打印衰退结束。\n",
+    "                    #print(list2,list1, 'START of RECESSION')\n",
+    "                    start = 1\n",
+    "                    #寻找衰退的底部，找到一个最小值\n",
+    "                    list3.append(list2[0])\n",
+    "                    list4.append(list1[0])\n",
+    "                    dic1[list2[0]] = list1[0]\n",
+    "                    \n",
+    "                    #if start == 1:\n",
+    "                        \n",
+    "                    j -= 1\n",
+    "                    list1.pop(0)\n",
+    "                    list2.pop(0)\n",
+    "                    \n",
+    "                    \n",
+    "                elif start == 1:\n",
+    "                    if (list1[0] < list1[1]) & (list1[1] < list1[2]):\n",
+    "                        start = 0\n",
+    "                        list3.append(list2[0])\n",
+    "                        list4.append(list1[0])\n",
+    "                        dic1[list2[0]] = list1[0]\n",
+    "                        #print(list3,'BOTTOM of RECESSION')\n",
+    "                        break\n",
+    "                    else:\n",
+    "                        list3.append(list2[0])\n",
+    "                        list4.append(list1[0])\n",
+    "                        dic1[list2[0]] = list1[0]\n",
+    "                        j -= 1\n",
+    "                        list1.pop(0)\n",
+    "                        list2.pop(0)\n",
+    "                            \n",
+    "                else:\n",
+    "                    j -= 1\n",
+    "                    list1.pop(0)\n",
+    "                    list2.pop(0)\n",
+    "    \n",
+    "    \n",
+    "    return min(dic1, key = dic1.get)\n",
+    "get_recession_bottom()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
