--- a/Course2/Assignment4.ipynb
+++ b/Course2/Assignment4.ipynb
@@ -41,22 +41,135 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "%matplotlib notebook\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "以上海市的历年gdp增长率"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "with open('shanghai_gdp.csv','r') as f:\n",
+    "    content = f.read()\n",
+    "with open('shanghai_gdp2.csv','w+') as f:\n",
+    "    f.write(content)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "data_gdp = pd.read_csv('shanghai_gdp_ratio.csv')\n",
+    "data_cpi = pd.read_csv('shanghai_CPI.xlsx.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_gdp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_cpi['year'] = data_cpi['year'].apply(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datas = data_gdp.merge(data_cpi,how='right',right_on='year',left_on='year')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "datas['CPI %'] = datas['compare_last_year_price'].apply(lambda x: x - 100)\n",
+    "datas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = datas.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_main = df2[['year','GDP_ratio','CPI %']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_main = df_main.round(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "plt.figure()\n",
+    "df_main['year'] = df_main['year'].apply(int)\n",
+    "\n",
+    "plt.plot(df_main['year'],df_main['GDP_ratio'],df_main['year'],df_main['CPI %'])\n",
+    "plt.legend(['GDP_Ratio','CPI'])\n",
+    "plt.title('GDP Ratio and CPI of Shanghai in 1978-2016')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.savefig('assignment4.png')"
+   ]
   }
  ],
  "metadata": {
@@ -75,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
